--- a/src/cs1530/planner/ui/login.fxml
+++ b/src/cs1530/planner/ui/login.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cs1530.planner.ui.LoginController">
    <children>
-      <Button mnemonicParsing="false" text="Confirm" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-      <TextField promptText="Username" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-      <TextField promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="45.0" />
+      <Button fx:id="createNew" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onCreateClick" prefHeight="25.0" text="Create New" textAlignment="CENTER" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <Button fx:id="confirm" mnemonicParsing="false" onAction="#onConfirmClick" prefHeight="25.0" text="Confirm" textAlignment="CENTER" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="45.0" />
+      <TextField fx:id="username" prefHeight="25.0" promptText="Username" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <PasswordField fx:id="password" promptText="Password" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="45.0" />
+      <Label fx:id="error" layoutX="14.0" layoutY="69.0" textFill="RED" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
    </children>
 </AnchorPane>
