--- a/src/cs1530/planner/ui/login/login.fxml
+++ b/src/cs1530/planner/ui/login/login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cs1530.planner.ui.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cs1530.planner.ui.login.LoginController">
    <children>
       <Button fx:id="createNew" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onCreateClick" prefHeight="25.0" text="Create New" textAlignment="CENTER" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
       <Button fx:id="confirm" mnemonicParsing="false" onAction="#onConfirmClick" prefHeight="25.0" text="Confirm" textAlignment="CENTER" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="45.0" />
