--- a/src/cs1530/planner/ui/profile/profile.fxml
+++ b/src/cs1530/planner/ui/profile/profile.fxml
@@ -10,16 +10,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cs1530.planner.ui.profile.ProfileController">
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="300.0">
          <children>
-            <Label text="mcwilleg" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0">
+            <Label fx:id="username" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button contentDisplay="CENTER" mnemonicParsing="false" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                <graphic>
                   <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <viewport>
@@ -31,7 +31,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="5.0">
+            <Button fx:id="filterButton" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="5.0">
                <graphic>
                   <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <viewport>
@@ -47,7 +47,7 @@
       </AnchorPane>
       <ScrollPane hbarPolicy="NEVER" prefHeight="550.0" prefWidth="300.0" AnchorPane.topAnchor="50.0">
          <content>
-            <VBox prefHeight="545.0" prefWidth="300.0" />
+            <VBox fx:id="eventBox" prefHeight="545.0" prefWidth="300.0" />
          </content>
       </ScrollPane>
    </children>
