Connected ProfileController to UI

--- a/src/cs1530/planner/ui/profile/profile.fxml
+++ b/src/cs1530/planner/ui/profile/profile.fxml
@@ -19,7 +19,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onAddButton" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                <graphic>
                   <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <viewport>
@@ -31,7 +31,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="filterButton" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="5.0">
+            <Button fx:id="filterButton" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onFilterButton" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="5.0">
                <graphic>
                   <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <viewport>
