--- a/src/cs1530/planner/ui/newevent/newevent.fxml
+++ b/src/cs1530/planner/ui/newevent/newevent.fxml
@@ -34,7 +34,7 @@
       </HBox>
       <Label fx:id="error" />
       <TextArea fx:id="description" prefHeight="200.0" prefWidth="200.0" promptText="Description" />
-      <Button fx:id="confirm" mnemonicParsing="false" text="Confirm" />
+      <Button fx:id="confirm" mnemonicParsing="false" onAction="#onConfirm" text="Confirm" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
