--- a/src/cs1530/planner/ui/profile/profile.fxml
+++ b/src/cs1530/planner/ui/profile/profile.fxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -19,30 +16,8 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onAddButton" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-               <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                     <viewport>
-                        <Rectangle2D />
-                     </viewport>
-                     <image>
-                        <Image url="@../../util/add.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button fx:id="filterButton" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onFilterButton" style="-fx-padding: 5; -fx-background-color: rgb(220,220,220);" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="5.0">
-               <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                     <viewport>
-                        <Rectangle2D />
-                     </viewport>
-                     <image>
-                        <Image url="@../../util/filter.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            <Label prefHeight="25.0" text="Add" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="5.0" />
+            <ChoiceBox fx:id="addBox" prefHeight="25.0" prefWidth="80.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
          </children>
       </AnchorPane>
       <ScrollPane hbarPolicy="NEVER" prefHeight="550.0" prefWidth="300.0" AnchorPane.topAnchor="50.0">
