--- a/src/cs1530/planner/ui/profile/profile.fxml
+++ b/src/cs1530/planner/ui/profile/profile.fxml
@@ -11,7 +11,7 @@
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="300.0">
          <children>
-            <Label fx:id="username" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0">
+            <Label fx:id="username" text="Profile Name" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
                <font>
                   <Font size="20.0" />
                </font>
